fix listings wrap and spacing for mobile

--- a/frontend/src/components/ListingIndexPage/ListingList.css
+++ b/frontend/src/components/ListingIndexPage/ListingList.css
@@ -232,6 +232,9 @@
         width: 87.5%;
         max-width: 481px;
     }
+    .uneven-listings:last-child {
+        margin-right: 0;
+    }    
 }
 
 @media (max-width:950px) {
